--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "botbuilder": "^3.9.0",
     "botbuilder-location": "^2.0.0",
+    "env2": "^2.2.0",
     "restify": "^5.0.1"
   }
 }
