--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
     "https": "^1.0.0",
+    "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
     "serve-static-restify": "^1.0.0"
   }
