--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "https": "^1.0.0",
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
+    "restify-plugins": "^1.6.0",
     "serve-static-restify": "^1.0.0"
   }
 }
