--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
     "restify-plugins": "^1.6.0",
+    "restify-session": "^1.1.1",
     "serve-static-restify": "^1.0.0"
   }
 }
