Added Restify Session to store Location 1

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "botbuilder": "^3.9.0",
     "env2": "^2.2.0",
+    "faye": "^1.2.4",
     "https": "^1.0.0",
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
