--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/nirmalrayan/medibot#readme",
   "dependencies": {
     "botbuilder": "^3.9.0",
+    "client-sessions": "^0.8.0",
     "env2": "^2.2.0",
     "faye": "^1.2.4",
     "https": "^1.0.0",
