--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "botbuilder": "^3.9.0",
     "env2": "^2.2.0",
     "faye": "^1.2.4",
+    "http": "0.0.0",
     "https": "^1.0.0",
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
