--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "https": "^1.0.0",
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
+    "restify-cookies": "^0.2.2",
     "restify-plugins": "^1.6.0",
     "restify-session": "^1.1.1",
     "serve-static-restify": "^1.0.0"
