--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "env2": "^2.2.0",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "node-session": "^1.2.1",
     "object-sizeof": "^1.2.0",
-    "redis": "^2.8.0",
     "restify": "^5.0.1",
     "restify-plugins": "^1.6.0",
-    "restify-session": "^1.1.1",
     "serve-static-restify": "^1.0.0"
   }
 }
