--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
     "restify-plugins": "^1.6.0",
-    "serve-static-restify": "^1.0.0"
+    "serve-static-restify": "^1.0.0",
+    "socket.io": "^2.0.3"
   }
 }
