--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MY_APP_ID=dcda60fe-72d4-4796-a728-de8fa3aef2a5
 MY_APP_PASSWORD=XmWPdDZynzVfx1gX7KQCnOp
 PORT=3000
 BING_MAPS_API_KEY=AjgT49m-_PFYGm_KAZ4nBmOxyNeEyCQXSV_ybfF3wLtebeCDoYVT0JNyOpnB-Y62
+WIT_ACCESS_TOKEN=YYXX4OGOYWHGWEDZGT72PQRUEJQHBRNM
