--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "botbuilder": "^3.9.0",
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
+    "geodist": "^0.2.1",
     "http": "0.0.0",
     "https": "^1.0.0",
     "node-wit": "^4.3.0",
