--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ MY_APP_PASSWORD=XmWPdDZynzVfx1gX7KQCnOp
 PORT=3000
 BING_MAPS_API_KEY=AjgT49m-_PFYGm_KAZ4nBmOxyNeEyCQXSV_ybfF3wLtebeCDoYVT0JNyOpnB-Y62
 WIT_ACCESS_TOKEN=YYXX4OGOYWHGWEDZGT72PQRUEJQHBRNM
+SQL_SERVER_USERNAME=sa
+SQL_SERVER_PASSWORD=MediAssist@123
+SQL_MEDIBOT_DB=QlikView
+SQL_MEDIBOT_FEEDBACK_TABLE=medibotFeedback
+SQL_SERVER_NAME=192.168.1.102
