--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ SQL_SERVER_PASSWORD=MediAssist@123
 SQL_MEDIBOT_DB=QlikView
 SQL_MEDIBOT_FEEDBACK_TABLE=medibotFeedback
 SQL_SERVER_NAME=192.168.1.102
+HEALTHCHECK_ID=c920aa2144b9e51184af002219349965
+MEDICINE_ID=467117a029f0e511aa80002219349965
+CONSULTATION_ID=ad131e35ffb9e51184af002219349965
+LABTEST_ID=f4a83a18cec74f1786b8fd2b9aff4c0c
+TELE_CONSULTATION=4f81d4702c8242009081cfde6301dd38
+SECOND_OPINION_ID=259fb4d2abcb480fb4e8778a33b9c9d2
+HOMEHEALTHCARE_ID=ba678c34a85141299c0b43ac3b1ee8ca
+GENOME_STUDY_ID=1b1fbfb833ea4e8d96c0a0325da21d69
