--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "geolib": "^2.0.23",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "microsoft-adaptivecards": "^0.6.1",
     "node-wit": "^4.3.0",
     "object-sizeof": "^1.2.0",
     "restify": "^5.0.1",
