--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "botbuilder": "^3.9.0",
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
+    "envx": "^1.0.0",
     "geolib": "^2.0.23",
     "http": "0.0.0",
     "https": "^1.0.0",
