--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "object-sizeof": "^1.2.0",
     "passport-facebook": "^2.1.1",
     "restify": "^5.0.1",
+    "restify-clients": "^1.5.1",
     "restify-plugins": "^1.6.0",
     "serve-static-restify": "^1.0.0",
     "tedious": "^2.0.0"
