--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "botbuilder": "^3.9.0",
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
-    "envx": "^1.0.0",
     "geolib": "^2.0.23",
     "http": "0.0.0",
     "https": "^1.0.0",
@@ -39,7 +38,6 @@
     "restify": "^5.0.1",
     "restify-clients": "^1.5.1",
     "restify-plugins": "^1.6.0",
-    "serve-static-restify": "^1.0.0",
-    "tedious": "^2.0.0"
+    "serve-static-restify": "^1.0.0"
   }
 }
