--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "botbuilder": "^3.9.0",
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
-    "envx": "^1.0.0",
     "geolib": "^2.0.23",
-    "http": "0.0.0",
-    "https": "^1.0.0",
     "microsoft-adaptivecards": "^0.6.1",
     "node-wit": "^4.3.0",
     "object-sizeof": "^1.2.0",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "restify": "^5.0.1",
     "restify-clients": "^1.5.1",
