--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
     "geolib": "^2.0.23",
+    "http": "0.0.0",
     "microsoft-adaptivecards": "^0.6.1",
     "node-wit": "^4.3.0",
     "object-sizeof": "^1.2.0",
