--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "homepage": "https://github.com/nirmalrayan/medibot#readme",
   "dependencies": {
     "botauth": "^0.2.12",
-    "botbuilder": "^3.10.2",
+    "botbuilder": "^3.12.0",
     "botbuilder-location": "^2.0.0",
     "env2": "^2.2.0",
     "geolib": "^2.0.23",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "microsoft-adaptivecards": "^0.6.1",
     "node-wit": "^4.3.0",
     "object-sizeof": "^1.2.0",
