Fixing Track Claim API calls 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medibot",
+  "name": "MediBuddy",
   "version": "1.0.0",
   "description": "Build a bot in Node.js on Microsoft Bot Framework",
   "main": "app.js",
