--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "object-sizeof": "^1.2.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "request": "^2.83.0",
     "restify": "^5.2.1",
     "restify-clients": "^1.5.2",
     "restify-plugins": "^1.6.0",
