--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/nirmalrayan/medibuddy-chatbot#readme",
   "dependencies": {
     "botbuilder": "^3.13.0",
+    "botbuilder-azure": "^3.0.4",
     "botbuilder-cognitiveservices": "^1.1.0",
     "botbuilder-location": "^1.0.4",
     "env2": "^2.2.0",
