Storing Feedback in Azure SQL

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/nirmalrayan/medibuddy-chatbot#readme",
   "dependencies": {
+    "async": "^2.6.0",
     "botbuilder": "^3.13.0",
     "botbuilder-azure": "^3.0.4",
     "botbuilder-cognitiveservices": "^1.1.0",
@@ -42,6 +43,7 @@
     "restify": "^5.2.1",
     "restify-clients": "^1.5.2",
     "restify-plugins": "^1.6.0",
-    "serve-static-restify": "^2.0.0"
+    "serve-static-restify": "^2.0.0",
+    "tedious": "^2.1.5"
   }
 }
