--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "geolib": "^2.0.23",
     "http": "0.0.0",
     "microsoft-adaptivecards": "^0.6.1",
+    "node-geocoder": "^3.21.1",
     "node-wit": "^4.3.0",
     "npm-check-updates": "^2.13.0",
     "object-sizeof": "^1.2.0",
