--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/nirmalrayan/medibuddy-chatbot#readme",
   "dependencies": {
+    "assert": "^1.4.1",
     "async": "^2.6.0",
     "botbuilder": "^3.14.0",
     "botbuilder-azure": "^3.0.4",
