--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "botbuilder": "^3.14.0",
     "botbuilder-azure": "^3.0.4",
     "botbuilder-cognitiveservices": "^1.1.0",
+    "botbuilder-handoff": "^0.2.0",
     "botbuilder-location": "^1.1.0",
     "env2": "^2.2.0",
     "geolib": "^2.0.23",
