--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "env2": "^2.2.0",
     "geolib": "^2.0.23",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "microsoft-adaptivecards": "^0.6.1",
     "node-geocoder": "^3.21.1",
     "node-wit": "^4.3.0",
