--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "async": "^2.6.0",
-    "botbuilder": "^3.14.0",
+    "botbuilder": "^3.14.1",
     "botbuilder-azure": "^3.0.4",
     "botbuilder-cognitiveservices": "^1.1.0",
     "botbuilder-handoff": "^0.2.0",
@@ -37,7 +37,9 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "microsoft-adaptivecards": "^0.6.1",
+    "needle": "^2.2.0",
     "node-geocoder": "^3.21.1",
+    "node-uuid": "^1.4.8",
     "node-wit": "^4.3.0",
     "npm-check-updates": "^2.13.0",
     "object-sizeof": "^1.2.0",
