--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "botbuilder-cognitiveservices": "^1.1.0",
     "botbuilder-handoff": "^0.2.0",
     "botbuilder-location": "^1.1.0",
+    "dns-cache": "^2.0.0",
     "env2": "^2.2.0",
     "geolib": "^2.0.23",
     "http": "0.0.0",
