--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^2.6.1",
     "botbuilder": "^3.15.0",
     "botbuilder-azure": "^3.0.4",
+    "botbuilder-azure-blobs": "^4.19.0",
     "botbuilder-cognitiveservices": "^1.2.0",
     "botbuilder-handoff": "^0.2.0",
     "botbuilder-location": "^1.1.0",
